--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MindCoach</title>
-
   <style>
     :root{
       --bg1:#fffaf2; --bg2:#eef9f7;
-      --brand:#0fa3b1; --accent:#f0c36d;
-      --text:#1c1c1c;  --muted:#6b7280;
-      --card:#ffffff;  --ring:#e6ebf5;
+      --brand:#0fA3B1; --accent:#f0c36d;
+      --text:#1c1c1c; --muted:#6b7280;
+      --card:#ffffff; --ring:#e6ebf5;
     }
+
     *{ box-sizing:border-box; }
 
     body{
@@ -19,90 +19,86 @@
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       color:var(--text);
       background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:28px;
-      scroll-behavior:smooth;
+      min-height:100svh;
+      display:flex; align-items:center; justify-content:center;
+      padding:24px 14px;
+      padding-bottom:120px;
+      -webkit-font-smoothing:antialiased;
     }
 
     .wrap{ width:100%; max-width:760px; }
+
     .card{
       background:var(--card);
       border:1px solid var(--ring);
       border-radius:16px;
-      box-shadow: 12px 30px 30px rgba(2,18,58,.06);
-      padding:24px 22px;
+      box-shadow:12px 30px 30px rgba(2,18,58,.06);
+      display:flex; flex-direction:column;
+      height:min(86svh, 720px);
+      max-height:calc(100svh - 48px);
+      overflow:hidden;
+      position:relative;
     }
 
-    .brand{ display:flex; align-items:center; gap:12px; margin:0 4px 0 0; }
-    .logo{
-      font-size:20px; line-height:1; padding:8px 12px; border-radius:12px;
-      background:#eef3ff; color:var(--brand);
-    }
+    .brand{ display:flex; align-items:center; gap:12px; margin:6px 10px 0; padding:10px; }
+    .logo{ font-size:22px; line-height:1; padding:8px 10px; border-radius:12px; background:#eef3ff; color:var(--brand); }
     .brand h1{ margin:0; font-size:22px; font-weight:700; letter-spacing:.2px; }
-    .tag{ margin:8px 0 18px; color:var(--muted); font-size:14px; }
+    .tag{ margin: 6px 18px 10px; color:var(--muted); font-size:14px; }
 
     label{ font-size:13px; color:var(--muted); }
-    select, input, button{
-      font:inherit;
-      border:1px solid var(--ring);
-      border-radius:10px;
-      padding:10px 12px;
-    }
-    select{ margin:0 8px 10px 8px; }
-    .row{ display:flex; gap:10px; }
-    input{ flex:1; outline:none; }
-    input:focus, select:focus{ border-color:var(--brand); box-shadow:0 0 0 3px rgba(7,102,238,.12); }
-    button{ background:var(--brand); color:white; cursor:pointer; }
-    button:disabled{ opacity:.6; cursor:not-allowed; }
+    select{ margin:8px 18px 10px; }
+    .row{ display:flex; gap:10px; align-items:center; margin:0 18px 8px; }
 
     #log{
-      margin-top:16px;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
+      flex:1;
+      overflow-y:auto;
+      padding:0 18px 110px;
+      display:flex; flex-direction:column; gap:10px;
+      -webkit-overflow-scrolling:touch;
+      scroll-behavior:smooth;
+      scroll-padding-bottom:110px;
     }
 
-    .msg{
-      opacity:0; transform:translateY(10px);
-      animation: fadeUp .4s ease-in-out forwards;
-      white-space: pre-wrap;
-      padding:12px 16px; border-radius:14px; max-width:80%; line-height:1.5;
-    }
-    @keyframes fadeUp{
-      from{ opacity:0; transform:translateY(10px); }
-      to{   opacity:1; transform:translateY(0); }
-    }
+    .msg{ padding:12px 14px; border:1px solid var(--ring); border-radius:12px; margin:2px 0; }
+    .you{ background:#dceaff; align-self:flex-end; text-align:right; font-weight:600; }
+    .ai{ background:#fffaf2; color:#111; }
+    .ai strong{ color:#000; }
 
-    .you{
-      background:#dceaff;
-      align-self:flex-end;
-      text-align:right;
-    }
-    .ai{
-      background:#fffaf2;
-      border:1px solid var(--accent);
-      align-self:flex-start;
-      text-align:left;
-    }
+    .dots{ display:inline-block; width:1.2em; text-align:left; }
+    .dots:after{ content:"…"; animation: blink 1s infinite steps(4,end); }
+    @keyframes blink{ 0%{opacity:0;}50%{opacity:1;}100%{opacity:0;} }
 
-    .dots::after{
-      content:"";
-      animation: ellipses 1.2s infinite steps(4,end);
-      display:inline-block; width:1ch; text-align:left;
+    .footer{
+      position:fixed;
+      left:50%; transform:translateX(-50%);
+      bottom:max(12px, env(safe-area-inset-bottom));
+      width:calc(100% - 32px);
+      max-width:760px;
+      z-index:10;
+
+      display:flex; gap:10px;
+      padding:12px;
+      background:var(--card);
+      border:1px solid var(--ring);
+      border-radius:14px;
+      box-shadow:0 8px 30px rgba(2,18,58,.08);
     }
-    @keyframes ellipses{
-      0%{ content:""; }
-      25%{ content:"."; }
-      50%{ content:".."; }
-      75%{ content:"..."; }
-      100%{ content:""; }
+    .footer input{
+      flex:1; font:inherit;
+      border:1px solid var(--ring); border-radius:12px; padding:12px 14px;
     }
+    .footer input:focus{
+      outline:none; border-color:var(--brand);
+      box-shadow:0 0 0 3px rgba(7,102,238,.12);
+    }
+    .footer button{
+      font:inherit; padding:12px 16px;
+      border-radius:12px; border:1px solid var(--brand);
+      background:var(--brand); color:#fff; cursor:pointer;
+    }
+    .footer button:disabled{ opacity:.6; cursor:not-allowed; }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <div class="card">
@@ -110,77 +106,76 @@
         <div class="logo">💎</div>
         <h1>MindCoach</h1>
       </div>
-      <div class="tag">You matter. You’re heard. Calm bilingual guidance by LuxeMind.</div>
-
-      <label for="langSelect" style="font-size:14px;margin-right:8px;">Language:</label>
-      <select id="langSelect">
-        <option value="auto">Auto</option>
-        <option value="es">Español</option>
-        <option value="en">English</option>
-        <option value="both">Both</option>
-      </select>
+      <div class="tag">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
 
       <div class="row">
-        <input id="msg" placeholder="Say hola / hi…" />
-        <button id="send">Send</button>
+        <label for="langSelect" style="margin-right:8px;">Language:</label>
+        <select id="langSelect">
+          <option value="auto">Auto</option>
+          <option value="es">Español</option>
+          <option value="en">English</option>
+          <option value="both">Both</option>
+        </select>
       </div>
 
       <div id="log"></div>
     </div>
   </div>
 
+  <div class="footer">
+    <input id="msg" placeholder="Say hola / hi…" />
+    <button id="send">Send</button>
+  </div>
+
   <script>
     const langSelect = document.getElementById("langSelect");
     const input = document.getElementById("msg");
-    const btn = document.getElementById("send");
-    const log = document.getElementById("log");
+    const btn   = document.getElementById("send");
+    const log   = document.getElementById("log");
 
     function add(role, text){
       const div = document.createElement("div");
-      div.className = (role === 'You') ? 'msg you' : 'msg ai';
-      div.innerHTML = `<strong>${role}:</strong> `;
+      div.className = (role === "You") ? "msg you" : "msg ai";
+      div.innerHTML = `<span class="${role === "You" ? "you" : "ai"}"><strong>${role}:</strong> </span>${text}`;
       log.appendChild(div);
-
-      // tiny typewriter
-      let i = 0;
-      const typer = setInterval(() => {
-        div.innerHTML += text.charAt(i);
-        i++;
-        if(i >= text.length){ clearInterval(typer); }
-        window.scrollTo(0, document.body.scrollHeight);
-      }, 18);
+      log.scrollTop = log.scrollHeight;
     }
 
     async function send(){
       const message = input.value.trim();
-      if(!message) return;
+      if (!message) return;
+
       add("You", message);
-      input.value = ""; btn.disabled = true; btn.textContent = "Thinking…";
+      input.value = "";
+      btn.disabled = true; btn.textContent = "Thinking…";
 
       const typingDiv = document.createElement("div");
       typingDiv.className = "msg ai";
-      typingDiv.innerHTML = `<em>MindCoach is typing<span class="dots"></span></em>`;
+      typingDiv.innerHTML = `<em>MindCoach is typing</em><span class="dots"></span>`;
       log.appendChild(typingDiv);
+      log.scrollTop = log.scrollHeight;
 
-      try{
+      try {
         const res = await fetch("/api/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ message, langMode: langSelect.value })
         });
         const data = await res.json();
+
         typingDiv.remove();
         add("MindCoach", data.text ?? data.error ?? "No response.");
-      }catch(e){
+      } catch (e){
         typingDiv.remove();
-        add("MindCoach", "Network error: " + (e?.message || e));
-      }finally{
+        add("MindCoach", "Network error: " + e.message);
+      } finally {
         btn.disabled = false; btn.textContent = "Send";
+        setTimeout(() => input.focus({ preventScroll: true }), 0);
       }
     }
 
     btn.onclick = send;
-    input.addEventListener("keydown", e => { if(e.key === "Enter") send(); });
+    input.addEventListener("keydown", (e) => { if (e.key === "Enter") send(); });
   </script>
 </body>
 </html>
