--- a/index.html
+++ b/index.html
@@ -4,113 +4,166 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MindCoach</title>
+
   <style>
     :root{
-      --bg1:#fffaf2; --bg2:#eef9f7;
-      --brand:#0fA3B1; --accent:#f0c36d;
-      --text:#1c1c1c; --muted:#6b7280;
-      --card:#ffffff; --ring:#e6ebf5;
+      --bg1:#f7fbff;
+      --bg2:#e9f0ff;
+      --brand:#0fa3b1;
+      --accent:#f0c36d;
+      --text:#1c1c1c;
+      --muted:#687280;
+      --card:#ffffff;
+      --ring:#d6e6f5;
+      --ai:#fffaf2;
+      --you:#dceaff;
     }
 
     *{ box-sizing:border-box; }
 
+    html, body { height: 100%; }
     body{
       margin:0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
       color:var(--text);
       background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      min-height:100svh;
-      display:flex; align-items:center; justify-content:center;
-      padding:24px 14px;
-      padding-bottom:120px;
-      -webkit-font-smoothing:antialiased;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:24px 12px;
     }
 
-    .wrap{ width:100%; max-width:760px; }
+    /* App shell */
+    .wrap{
+      width:100%;
+      max-width:780px;
+    }
 
     .card{
       background:var(--card);
       border:1px solid var(--ring);
       border-radius:16px;
-      box-shadow:12px 30px 30px rgba(2,18,58,.06);
-      display:flex; flex-direction:column;
-      height:min(86svh, 720px);
-      max-height:calc(100svh - 48px);
-      overflow:hidden;
-      position:relative;
+      box-shadow: 12px 30px 30px rgba(2, 18, 58, .06);
+      display:flex;
+      flex-direction:column;
+      /* key: height so inner area can scroll while input stays visible */
+      max-height: 82vh;
+      overflow: hidden;
     }
 
-    .brand{ display:flex; align-items:center; gap:12px; margin:6px 10px 0; padding:10px; }
-    .logo{ font-size:22px; line-height:1; padding:8px 10px; border-radius:12px; background:#eef3ff; color:var(--brand); }
-    .brand h1{ margin:0; font-size:22px; font-weight:700; letter-spacing:.2px; }
-    .tag{ margin: 6px 18px 10px; color:var(--muted); font-size:14px; }
+    /* Header */
+    .brand{
+      display:flex; align-items:center; gap:12px;
+      padding:14px 16px 8px 16px;
+    }
+    .logo{
+      font-size:20px; line-height:1; padding:8px; border-radius:12px;
+      background:#eef3ff; color:var(--brand);
+    }
+    .brand h1{
+      margin:0; font-size:22px; font-weight:700; letter-spacing:.2px;
+      background: linear-gradient(90deg, var(--brand), #4fc3f7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .tag{
+      margin:2px 16px 10px 16px; color:var(--muted); font-size:14px;
+    }
 
     label{ font-size:13px; color:var(--muted); }
-    select{ margin:8px 18px 10px; }
-    .row{ display:flex; gap:10px; align-items:center; margin:0 18px 8px; }
-
-    #log{
-      flex:1;
-      overflow-y:auto;
-      padding:0 18px 110px;
-      display:flex; flex-direction:column; gap:10px;
-      -webkit-overflow-scrolling:touch;
-      scroll-behavior:smooth;
-      scroll-padding-bottom:110px;
-    }
-
-    .msg{ padding:12px 14px; border:1px solid var(--ring); border-radius:12px; margin:2px 0; }
-    .you{ background:#dceaff; align-self:flex-end; text-align:right; font-weight:600; }
-    .ai{ background:#fffaf2; color:#111; }
-    .ai strong{ color:#000; }
-
-    .dots{ display:inline-block; width:1.2em; text-align:left; }
-    .dots:after{ content:"…"; animation: blink 1s infinite steps(4,end); }
-    @keyframes blink{ 0%{opacity:0;}50%{opacity:1;}100%{opacity:0;} }
-
-    .footer{
-      position:fixed;
-      left:50%; transform:translateX(-50%);
-      bottom:max(12px, env(safe-area-inset-bottom));
-      width:calc(100% - 32px);
-      max-width:760px;
-      z-index:10;
-
-      display:flex; gap:10px;
-      padding:12px;
-      background:var(--card);
+    select, input, button{ font:inherit; }
+    select{
+      margin: 0 10px 10px 0;
       border:1px solid var(--ring);
-      border-radius:14px;
-      box-shadow:0 8px 30px rgba(2,18,58,.08);
+      border-radius:10px;
+      padding:8px 10px;
     }
-    .footer input{
-      flex:1; font:inherit;
-      border:1px solid var(--ring); border-radius:12px; padding:12px 14px;
+
+    /* Chat layout  */
+    .scroll{
+      /* only this area scrolls */
+      overflow-y:auto;
+      padding: 8px 12px 12px 12px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      /* smooth momentum on iOS */
+      -webkit-overflow-scrolling: touch;
     }
-    .footer input:focus{
-      outline:none; border-color:var(--brand);
-      box-shadow:0 0 0 3px rgba(7,102,238,.12);
+
+    #log { display:flex; flex-direction:column; gap:10px; }
+
+    .row{ display:flex; gap:10px; padding: 0 16px 12px 16px; }
+
+    .composer{
+      position: sticky;
+      bottom: 0;
+      background: linear-gradient(180deg, rgba(255,255,255,0), var(--card) 35%);
+      padding: 10px 16px calc(10px + env(safe-area-inset-bottom));
+      border-top:1px solid var(--ring);
     }
-    .footer button{
-      font:inherit; padding:12px 16px;
-      border-radius:12px; border:1px solid var(--brand);
-      background:var(--brand); color:#fff; cursor:pointer;
+
+    input#msg{
+      flex:1;
+      outline:none;
+      border:1px solid var(--ring);
+      border-radius:12px;
+      padding:11px 14px;
+      background:#fff;
     }
-    .footer button:disabled{ opacity:.6; cursor:not-allowed; }
+    input#msg:focus{ border-color:var(--brand); box-shadow:0 0 3px rgba(7,102,238,.12); }
+
+    button{
+      background:var(--brand); color:white; cursor:pointer;
+      border:none; border-radius:12px; padding:11px 16px; font-weight:600;
+    }
+    button:disabled{ opacity:.6; cursor:not-allowed; }
+
+    /* Message bubbles */
+    .msg{
+      display:inline-block;
+      max-width:94%;
+      padding: 14px 16px;
+      border:1px solid var(--ring);
+      border-radius:16px;
+      box-shadow: 0 1px 3px rgba(0,0,0,.08);
+      white-space: pre-wrap;
+      word-break: break-word;
+      line-height: 1.75;
+      animation: fadeIn .35s ease-in-out;
+    }
+    .msg p { margin: 0 0 12px 0; }
+    .msg p:last-child { margin-bottom: 0; }
+
+    .you { background-color: var(--you); align-self: flex-end; text-align:right; }
+    .ai  { background-color: var(--ai);  align-self: flex-start; text-align:left; }
+    .bubbleHead{ font-weight:700; color:var(--brand); }
+
+    /* Tiny “typing…” dots */
+    .dots::after{ content:""; animation: blink 1s infinite; }
+    @keyframes blink { 0%, 100% {opacity:0;} 50% {opacity:1;} }
+    @keyframes fadeIn { from{ opacity:0; transform: translateY(10px); } to{ opacity:1; transform: translateY(0); } }
+
+    /* Small screens */
+    @media (max-width: 640px){
+      .card{ max-height: 86vh; }
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="card">
+      <!-- Header -->
       <div class="brand">
         <div class="logo">💎</div>
         <h1>MindCoach</h1>
       </div>
       <div class="tag">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
 
-      <div class="row">
-        <label for="langSelect" style="margin-right:8px;">Language:</label>
-        <select id="langSelect">
+      <!-- Controls -->
+      <div style="padding: 0 16px 8px 16px;">
+        <label for="langSelect" style="font-size:14px;margin-right:8px;">Language:</label>
+        <select id="langSelect" style="margin-bottom:10px;">
           <option value="auto">Auto</option>
           <option value="es">Español</option>
           <option value="en">English</option>
@@ -118,64 +171,110 @@
         </select>
       </div>
 
-      <div id="log"></div>
+      <!-- Scrollable messages -->
+      <div class="scroll" id="scroll">
+        <div id="log"></div>
+      </div>
+
+      <!-- Sticky composer -->
+      <div class="composer">
+        <div class="row">
+          <input id="msg" placeholder="Say hola / hi…" />
+          <button id="send">Send</button>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="footer">
-    <input id="msg" placeholder="Say hola / hi…" />
-    <button id="send">Send</button>
-  </div>
-
   <script>
-    const langSelect = document.getElementById("langSelect");
-    const input = document.getElementById("msg");
-    const btn   = document.getElementById("send");
-    const log   = document.getElementById("log");
+    // Elements
+    const scrollBox = document.getElementById('scroll');
+    const log = document.getElementById('log');
+    const input = document.getElementById('msg');
+    const btn = document.getElementById('send');
+    const langSelect = document.getElementById('langSelect');
 
-    function add(role, text){
-      const div = document.createElement("div");
-      div.className = (role === "You") ? "msg you" : "msg ai";
-      div.innerHTML = `<span class="${role === "You" ? "you" : "ai"}"><strong>${role}:</strong> </span>${text}`;
-      log.appendChild(div);
-      log.scrollTop = log.scrollHeight;
+    function autoscroll() {
+      // keep last message in view
+      scrollBox.scrollTo({ top: scrollBox.scrollHeight, behavior: 'smooth' });
     }
 
-    async function send(){
+    function toParagraphs(text) {
+      // Split on double newlines into <p> for nicer reading blocks
+      return text
+        .trim()
+        .split(/\n\s*\n/)
+        .map(p => `<p>${p}</p>`)
+        .join('');
+    }
+
+    function add(role, text) {
+      const div = document.createElement('div');
+      div.className = 'msg ' + (role === 'You' ? 'you' : 'ai');
+      div.innerHTML = `<span class="bubbleHead">${role}:</span><br>${toParagraphs(text)}`;
+      log.appendChild(div);
+      autoscroll();
+    }
+
+    // Typing indicator node (re-used)
+    let typingDiv = null;
+    function showTyping() {
+      if (typingDiv) return;
+      typingDiv = document.createElement('div');
+      typingDiv.className = 'msg ai';
+      typingDiv.innerHTML = `<em>MindCoach is typing<span class="dots">...</span></em>`;
+      log.appendChild(typingDiv);
+      autoscroll();
+    }
+    function hideTyping() {
+      if (!typingDiv) return;
+      typingDiv.remove();
+      typingDiv = null;
+    }
+
+    async function send() {
       const message = input.value.trim();
       if (!message) return;
 
-      add("You", message);
-      input.value = "";
-      btn.disabled = true; btn.textContent = "Thinking…";
-
-      const typingDiv = document.createElement("div");
-      typingDiv.className = "msg ai";
-      typingDiv.innerHTML = `<em>MindCoach is typing</em><span class="dots"></span>`;
-      log.appendChild(typingDiv);
-      log.scrollTop = log.scrollHeight;
+      add('You', message);
+      input.value = '';
+      btn.disabled = true;
+      btn.textContent = 'Thinking…';
+      showTyping();
 
       try {
-        const res = await fetch("/api/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
+        const res = await fetch('/api/chat', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ message, langMode: langSelect.value })
         });
         const data = await res.json();
-
-        typingDiv.remove();
-        add("MindCoach", data.text ?? data.error ?? "No response.");
-      } catch (e){
-        typingDiv.remove();
-        add("MindCoach", "Network error: " + e.message);
+        hideTyping();
+        add('MindCoach', data.text ?? data.error ?? 'No response.');
+      } catch (e) {
+        hideTyping();
+        add('MindCoach', 'Network error: ' + e.message);
       } finally {
-        btn.disabled = false; btn.textContent = "Send";
-        setTimeout(() => input.focus({ preventScroll: true }), 0);
+        btn.disabled = false;
+        btn.textContent = 'Send';
+        autoscroll();
       }
     }
 
+    // UX niceties
     btn.onclick = send;
-    input.addEventListener("keydown", (e) => { if (e.key === "Enter") send(); });
+    input.addEventListener('keydown', (e) => { if (e.key === 'Enter') send(); });
+
+    // Keep input visible when keyboard opens (iOS)
+    if (window.visualViewport) {
+      window.visualViewport.addEventListener('resize', () => {
+        // Nudge scroll to bottom so the latest msg + composer are visible
+        autoscroll();
+      });
+    }
+
+    // Initial focus
+    input.focus();
   </script>
 </body>
 </html>
