--- a/index.html
+++ b/index.html
@@ -1,178 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MindCoach ✨</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MindCoach</title>
   <style>
     :root {
-      --brand: #a2e0ff;
-      --accent: #87c8de;
-      --text: #222;
-      --bg: #f9fafb;
+      --bg1: #eef0f7;
+      --bg2: #ffffff;
+      --brand: #3b82f6;
+      --text: #333;
+      --ai: #fff8e6;
+      --user: #dbeafe;
+      --shadow: rgba(0,0,0,0.05);
     }
-
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      margin: 0;
-      font-family: "Inter", system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 16px;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg1);
+      display: flex; justify-content: center; align-items: center;
+      height: 100vh; overflow: hidden;
     }
-
     .card {
-      width: 100%;
-      max-width: 700px;
-      background: #fff;
+      background: var(--bg2);
+      box-shadow: 0 4px 16px var(--shadow);
       border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
+      width: 100%; max-width: 720px; height: 90vh;
+      display: flex; flex-direction: column; overflow: hidden;
     }
-
-    header {
-      background: linear-gradient(135deg, var(--brand), var(--accent));
-      color: #fff;
-      padding: 16px 20px;
-      font-weight: 600;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .subtitle {
-      font-weight: 400;
-      font-size: 0.9rem;
-      color: #f5f5f5;
-    }
-
-    .controls {
-      background: #f7f7f7;
-      padding: 10px 20px;
-      border-bottom: 1px solid #eee;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    label {
-      font-size: 0.9rem;
-      color: #333;
-      margin-right: 6px;
-    }
-
-    select {
-      padding: 6px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      background: #fff;
-    }
-
-    #log {
-      flex: 1;
-      overflow-y: auto;
-      padding: 16px 20px;
-      scroll-behavior: smooth;
-    }
-
-    .msg {
-      margin: 10px 0;
-      padding: 12px 16px;
-      border-radius: 10px;
-      line-height: 1.4;
-      white-space: pre-wrap;
-      max-width: 90%;
-    }
-
-    .you {
-      background: #e9f7ff;
-      align-self: flex-end;
-      border: 1px solid #bde0f6;
-    }
-
-    .ai {
-      background: #f6f6f6;
-      border: 1px solid #e1e1e1;
-      align-self: flex-start;
-    }
-
-    .row {
-      display: flex;
-      border-top: 1px solid #eee;
-      background: #fafafa;
-      padding: 10px;
-      gap: 10px;
-    }
-
-    input {
-      flex: 1;
-      padding: 10px 12px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    button {
-      background: var(--brand);
-      color: #000;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 18px;
-      cursor: pointer;
-      font-weight: 600;
-    }
-
-    button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
-
-    @keyframes dots {
-      0% { content: ""; }
-      33% { content: "."; }
-      66% { content: ".."; }
-      100% { content: "..."; }
-    }
-
-    .dots::after {
-      content: "";
-      animation: dots 1.5s steps(3, end) infinite;
-    }
+    .brand { padding: 16px; text-align: center; background: var(--bg2); border-bottom: 1px solid #e5e7eb; }
+    .brand h1 { font-size: 22px; color: var(--brand); margin-bottom: 4px; }
+    .tag { font-size: 13px; color: #666; }
+    .controls { padding: 12px 16px; border-bottom: 1px solid #e5e7eb; background: var(--bg2); display: flex; justify-content: center; align-items: center; gap: 8px; font-size: 14px; }
+    #log { flex: 1; overflow-y: auto; padding: 16px; scroll-behavior: smooth; background: #f9fafb; }
+    .msg { margin: 8px 0; padding: 12px 16px; border-radius: 12px; max-width: 80%; line-height: 1.5; font-size: 15px; white-space: pre-wrap; word-wrap: break-word; box-shadow: 0 1px 2px var(--shadow); }
+    .msg.you { background: var(--user); align-self: flex-end; text-align: right; }
+    .msg.ai { background: var(--ai); align-self: flex-start; text-align: left; }
+    .row { display: flex; padding: 12px; border-top: 1px solid #e5e7eb; background: var(--bg2); }
+    input { flex: 1; padding: 10px 12px; font-size: 15px; border-radius: 8px; border: 1px solid #ccc; outline: none; }
+    button { background: var(--brand); color: white; font-weight: 600; border: none; border-radius: 8px; padding: 10px 16px; margin-left: 8px; cursor: pointer; }
+    button:hover { background: #2563eb; }
+    @media (max-width: 600px) { .card { height: 95vh; border-radius: 0; } }
   </style>
 </head>
-
 <body>
   <div class="card">
-    <header>
-      <div>
-        MindCoach 💎
-        <div class="subtitle">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
-      </div>
-    </header>
+    <div class="brand">
+      <h1>💎 MindCoach</h1>
+      <div class="tag">You matter. You’re heard. Calm guidance in every language by LuxeMind.</div>
+    </div>
 
     <div class="controls">
       <label for="langSelect">Language:</label>
       <select id="langSelect">
-        <option value="auto" selected>Auto (detect)</option>
+        <option value="auto">Auto (detect)</option>
         <option value="es">Español</option>
         <option value="en">English</option>
-        <option value="both">Both (ES + EN)</option>
       </select>
     </div>
 
     <div id="log"></div>
 
     <div class="row">
-      <input id="msg" type="text" placeholder="Say hola / hi / bonjour..." />
+      <input id="msg" type="text" placeholder="Say hola / hi / bonjour…" />
       <button id="send">Send</button>
     </div>
   </div>
@@ -200,26 +90,23 @@
       btn.disabled = true;
       btn.textContent = "Thinking…";
 
-      const typingDiv = document.createElement("div");
-      typingDiv.className = "msg ai";
-      typingDiv.innerHTML = `<em>MindCoach is typing<span class="dots"></span></em>`;
-      log.appendChild(typingDiv);
-      typingDiv.scrollIntoView({ behavior: "smooth", block: "end" });
+      const typing = document.createElement("div");
+      typing.className = "msg ai";
+      typing.textContent = "MindCoach is typing…";
+      log.appendChild(typing);
+      typing.scrollIntoView({ behavior: "smooth", block: "end" });
 
       try {
         const res = await fetch("/api/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            message,
-            langMode: langSelect.value
-          })
+          body: JSON.stringify({ message, langMode: langSelect.value })
         });
         const data = await res.json();
-        typingDiv.remove();
+        typing.remove();
         add("MindCoach", data.text ?? data.error ?? "No response.");
-      } catch (err) {
-        typingDiv.remove();
+      } catch (e) {
+        typing.remove();
         add("MindCoach", "⚠️ Network error. Please try again.");
       } finally {
         btn.disabled = false;
@@ -228,9 +115,7 @@
     }
 
     btn.onclick = send;
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") send();
-    });
+    input.addEventListener("keydown", (e) => { if (e.key === "Enter") send(); });
   </script>
 </body>
 </html>
