ui: add water background + calm palette

--- a/index.html
+++ b/index.html
@@ -1,401 +1,171 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <title>MindCoach</title>
-    <style>
-      :root {
-        --bg1: #f7f7f2;
-        --bg2: #e8f3f1;
-        --brand: #0fa3b1;
-        --accent: #8ab9a3;
-        --text: #1c1c1c;
-        --muted: #6b7280;
-        --card: #ffffff;
-        --ring: #e5dcc9;
-        --ai: #fff7e6;
-        --you: #e3f0ff;
-      }
+<style>
+:root {
+  --bg1: #eef6ff;
+  --bg2: #e7f7f2;
+  --bg3: #f7f2e8;
+  --card: #ffffff;
+  --brand: #4fa3d1;
+  --bubble-ai: #f7f2e8;
+  --bubble-you: #e0f2ff;
+  --text: #3f4a52;
+  --muted: #7c8a94;
+}
 
-      * {
-        box-sizing: border-box;
-      }
+/* Watercolor background using layered gradients */
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif;
+  color: var(--text);
 
-      body {
-        margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Helvetica, Arial, sans-serif;
-        color: var(--text);
-        background: radial-gradient(circle at top left, var(--bg2), var(--bg1));
-        min-height: 100vh;
-        display: flex;
-        align-items: stretch;
-        justify-content: center;
-        padding: 16px;
-      }
+  background:
+    radial-gradient(circle at 20% 20%, rgba(200,225,255,0.45), transparent 60%),
+    radial-gradient(circle at 80% 30%, rgba(210,245,230,0.4), transparent 60%),
+    radial-gradient(circle at 30% 80%, rgba(255,240,220,0.45), transparent 60%),
+    linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg3));
 
-      .wrap {
-        width: 100%;
-        max-width: 760px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+  background-size: cover;
+  background-attachment: fixed;
 
-      .card {
-        background: var(--card);
-        border-radius: 24px;
-        box-shadow: 0 18px 40px rgba(0, 0, 0, 0.06);
-        border: 1px solid rgba(229, 220, 201, 0.9);
-        padding: 20px 20px 16px;
-        width: 100%;
-        max-height: 90vh;
-        display: flex;
-        flex-direction: column;
-      }
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  -webkit-font-smoothing: antialiased;
+}
 
-      .brand {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 6px;
-      }
+/* App container card */
+.wrap {
+  width: 100%;
+  max-width: 760px;
+  display: flex;
+  justify-content: center;
+}
 
-      .brand_logo {
-        width: 32px;
-        height: 32px;
-        border-radius: 999px;
-        background: linear-gradient(135deg, #d9fbff, #bde3ff);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.9);
-      }
+.card {
+  background: var(--card);
+  border-radius: 28px;
+  padding: 26px 24px 18px;
+  width: 100%;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  animation: fadeIn 0.5s ease-out;
+}
 
-      .brand_logo span {
-        font-size: 18px;
-      }
+/* Brand style */
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 10px;
+}
 
-      .brand h1 {
-        margin: 0;
-        font-size: 22px;
-        letter-spacing: 0.03em;
-      }
+.brand_logo {
+  width: 38px;
+  height: 38px;
+  border-radius: 999px;
+  background: linear-gradient(135deg, #d9f8ff, #bde3ff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 4px rgba(0,0,0,0.1);
+}
+.brand_logo span {
+  font-size: 18px;
+}
 
-      .tag {
-        margin: 2px 0 12px;
-        font-size: 13px;
-        color: var(--muted);
-      }
+.brand h1 {
+  font-size: 24px;
+  margin: 0;
+  color: var(--brand);
+}
 
-      .controls {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        font-size: 13px;
-        color: var(--muted);
-        margin-bottom: 8px;
-        flex-wrap: wrap;
-      }
+.tag {
+  color: var(--muted);
+  font-size: 14px;
+  margin-bottom: 16px;
+}
 
-      label {
-        font-weight: 500;
-      }
+/* Chat area */
+#log {
+  flex: 1;
+  margin-bottom: 16px;
+  overflow-y: auto;
+  padding-right: 4px;
+}
 
-      select,
-      input {
-        font: inherit;
-        border-radius: 999px;
-        border: 1px solid var(--ring);
-        padding: 7px 12px;
-        outline: none;
-      }
+/* Chat bubbles */
+.msg {
+  padding: 14px 18px;
+  margin-bottom: 10px;
+  border-radius: 16px;
+  line-height: 1.45;
+  font-size: 15px;
+  white-space: pre-wrap;
+}
 
-      select:focus,
-      input:focus {
-        border-color: var(--brand);
-        box-shadow: 0 0 0 2px rgba(15, 163, 177, 0.15);
-      }
+.msg.ai {
+  background: var(--bubble-ai);
+  border-left: 4px solid #dfd7c7;
+}
 
-      #log {
-        margin-top: 10px;
-        padding: 10px 4px 12px;
-        border-radius: 16px;
-        background: linear-gradient(
-          135deg,
-          rgba(255, 255, 255, 0.9),
-          rgba(247, 247, 242, 0.95)
-        );
-        border: 1px solid rgba(234, 228, 210, 0.9);
-        flex: 1;
-        min-height: 160px;
-        max-height: 100%;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
+.msg.you {
+  background: var(--bubble-you);
+  border-right: 4px solid #b5ddff;
+  text-align: right;
+}
 
-      .msg {
-        max-width: 90%;
-        padding: 10px 14px;
-        border-radius: 16px;
-        font-size: 14px;
-        line-height: 1.5;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
-        animation: fadeIn 0.35s ease-out;
-        white-space: pre-wrap;
-      }
+/* Controls */
+.controls {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 8px;
+}
 
-      .msg.you {
-        align-self: flex-end;
-        background: var(--you);
-        border-radius: 16px 16px 4px 16px;
-      }
+select, input {
+  border-radius: 999px;
+  border: 1px solid #c7d9df;
+  padding: 9px 14px;
+  font-size: 14px;
+}
 
-      .msg.ai {
-        align-self: flex-start;
-        background: var(--ai);
-        border-radius: 16px 16px 16px 4px;
-      }
+/* Input + button */
+.row {
+  display: flex;
+  gap: 10px;
+}
 
-      .msg strong {
-        font-weight: 600;
-      }
+.row input {
+  flex: 1;
+  background: #fafafa;
+}
 
-      .msg.typing {
-        opacity: 0.85;
-        font-style: italic;
-        display: flex;
-        align-items: center;
-        gap: 4px;
-      }
+button {
+  border-radius: 999px;
+  padding: 10px 20px;
+  background: var(--brand);
+  color: white;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 5px 16px rgba(79,163,209,0.25);
+  transition: 0.15s ease-out;
+}
 
-      .dots {
-        display: inline-block;
-        width: 20px;
-        text-align: left;
-      }
+button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 8px 22px rgba(79,163,209,0.28);
+}
 
-      .dots span {
-        display: inline-block;
-        width: 4px;
-        height: 4px;
-        margin-right: 2px;
-        border-radius: 999px;
-        background: #e0b979;
-        animation: bounce 1s infinite ease-in-out;
-      }
+button:active {
+  transform: translateY(0);
+}
 
-      .dots span:nth-child(2) {
-        animation-delay: 0.2s;
-      }
-
-      .dots span:nth-child(3) {
-        animation-delay: 0.4s;
-      }
-
-      .row {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        margin-top: 10px;
-      }
-
-      .row input {
-        flex: 1;
-        border-radius: 999px;
-        padding: 10px 14px;
-        background: #fafaf6;
-      }
-
-      button {
-        border-radius: 999px;
-        padding: 10px 20px;
-        border: none;
-        cursor: pointer;
-        font-weight: 600;
-        background: var(--brand);
-        color: #ffffff;
-        box-shadow: 0 6px 18px rgba(15, 163, 177, 0.25);
-        transition: transform 0.08s ease-out, box-shadow 0.08s ease-out;
-      }
-
-      button:hover {
-        transform: translateY(-1px);
-        box-shadow: 0 10px 22px rgba(15, 163, 177, 0.3);
-      }
-
-      button:active {
-        transform: translateY(0);
-        box-shadow: 0 4px 12px rgba(15, 163, 177, 0.2);
-      }
-
-      button:disabled {
-        opacity: 0.6;
-        cursor: not-allowed;
-        box-shadow: none;
-      }
-
-      @keyframes bounce {
-        0%,
-        80%,
-        100% {
-          transform: translateY(0);
-          opacity: 0.4;
-        }
-        40% {
-          transform: translateY(-3px);
-          opacity: 1;
-        }
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(4px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      @media (max-width: 768px) {
-        body {
-          padding: 10px;
-        }
-        .card {
-          padding: 16px 14px 12px;
-          border-radius: 18px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="card">
-        <div class="brand">
-          <div class="brand_logo"><span>💎</span></div>
-          <h1>MindCoach</h1>
-        </div>
-        <div class="tag">
-          You matter. You’re heard. Calm guidance in every language by LuxeMind.
-        </div>
-
-        <div class="controls">
-          <label for="langSelect">Language:</label>
-          <select id="langSelect">
-            <option value="auto">Auto</option>
-            <option value="es">Español</option>
-            <option value="en">English</option>
-            <option value="fr">Français</option>
-            <option value="pt">Português</option>
-            <option value="other">Other / Mixed</option>
-          </select>
-        </div>
-
-        <div id="log"></div>
-
-        <div class="row">
-          <input
-            id="msg"
-            type="text"
-            placeholder="Say hola / hi / bonjour..."
-            autocomplete="off"
-          />
-          <button id="send">Send</button>
-        </div>
-      </div>
-    </div>
-
-    <script>
-      const log = document.getElementById("log");
-      const input = document.getElementById("msg");
-      const btn = document.getElementById("send");
-      const langSelect = document.getElementById("langSelect");
-
-      function scrollToBottom() {
-        log.scrollTop = log.scrollHeight;
-      }
-
-      function add(role, text) {
-        const div = document.createElement("div");
-        div.className = "msg " + (role === "You" ? "you" : "ai");
-        div.innerHTML =
-          "<strong>" + role + ":</strong> " + (text || "").trim();
-        log.appendChild(div);
-        scrollToBottom();
-      }
-
-      function addTyping() {
-        const div = document.createElement("div");
-        div.className = "msg ai typing";
-        div.innerHTML =
-          "<strong>MindCoach:</strong> <span class='dots'><span></span><span></span><span></span></span>";
-        log.appendChild(div);
-        scrollToBottom();
-        return div;
-      }
-
-      async function send() {
-        const message = input.value.trim();
-        if (!message) return;
-
-        add("You", message);
-        input.value = "";
-        input.focus();
-
-        btn.disabled = true;
-        btn.textContent = "Thinking…";
-
-        const typingDiv = addTyping();
-
-        try {
-          const res = await fetch("/api/chat", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              message,
-              langMode: langSelect.value,
-            }),
-          });
-
-          const data = await res.json();
-          typingDiv.remove();
-
-          if (!res.ok) {
-            add(
-              "MindCoach",
-              data?.error || "Hmm, something went wrong. Try again in a moment."
-            );
-          } else {
-            add("MindCoach", data?.text || "(No response text)");
-          }
-        } catch (e) {
-          typingDiv.remove();
-          add(
-            "MindCoach",
-            "Network error, cariño. Please check your connection and try again."
-          );
-        } finally {
-          btn.disabled = false;
-          btn.textContent = "Send";
-          scrollToBottom();
-        }
-      }
-
-      btn.onclick = send;
-      input.addEventListener("keydown", (e) => {
-        if (e.key === "Enter" && !e.shiftKey) {
-          e.preventDefault();
-          send();
-        }
-      });
-    </script>
-  </body>
-</html>
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(6px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+</style>
