add logo to header

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
         align-items: center;
         box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
       }
+      .brand_logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
       .brand_logo span {
         font-size: 18px;
@@ -231,6 +236,13 @@
           font-size: 21px;
         }
       }
+      .logo-img {
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto 8px auto;
+}
     </style>
   </head>
 
@@ -239,7 +251,7 @@
       <div class="card">
         <div class="brand">
           <div class="brand_logo">
-            <span>💎</span>
+            <img src="desktop_512x512.png" alt="MindCoach logo" class="logo-img" />
           </div>
           <h1>MindCoach</h1>
         </div>
