Add mobile favicon link (1024x1024)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <title>MindCoach</title>
-
+    <link rel="icon" type="image/png" sizes="1024x1024" href="mobile_app_icon_1024.png" />
     <style>
       :root {
         --bg1: #eef6ff;
